samples/ut/access/FailPrivate08.err
FailPrivate08.z2(7, 29): error: can't access non public function 'test' of class 'Bar'